qt/gen_qtableview.h

typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QItemSelection QItemSelection;
typedef struct QKeyEvent QKeyEvent;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QResizeEvent QResizeEvent;
typedef struct QSize QSize;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QTableView_override_virtual_viewportSizeHint(void* self, intptr_t slot);
bool QTableView_override_virtual_sizeHintForRow(void* self, intptr_t slot);
int QTableView_virtualbase_sizeHintForRow(const void* self, int row);
bool QTableView_override_virtual_sizeHintForColumn(void* self, intptr_t slot);
int QTableView_virtualbase_sizeHintForColumn(const void* self, int column);
bool QTableView_override_virtual_verticalScrollbarAction(void* self, intptr_t slot);
void QTableView_virtualbase_verticalScrollbarAction(void* self, int action);
bool QTableView_override_virtual_horizontalScrollbarAction(void* self, intptr_t slot);
void QTableView_virtualbase_horizontalScrollbarAction(void* self, int action);
bool QTableView_override_virtual_isIndexHidden(void* self, intptr_t slot);
bool QTableView_virtualbase_isIndexHidden(const void* self, QModelIndex* index);
bool QTableView_override_virtual_selectionChanged(void* self, intptr_t slot);
void QTableView_virtualbase_selectionChanged(void* self, QItemSelection* selected, QItemSelection* deselected);
bool QTableView_override_virtual_currentChanged(void* self, intptr_t slot);
void QTableView_virtualbase_currentChanged(void* self, QModelIndex* current, QModelIndex* previous);
bool QTableView_override_virtual_keyboardSearch(void* self, intptr_t slot);
void QTableView_virtualbase_keyboardSearch(void* self, struct miqt_string search);
bool QTableView_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QTableView_virtualbase_inputMethodQuery(const void* self, int query);
bool QTableView_override_virtual_reset(void* self, intptr_t slot);
void QTableView_virtualbase_reset(void* self);
bool QTableView_override_virtual_selectAll(void* self, intptr_t slot);
void QTableView_virtualbase_selectAll(void* self);
bool QTableView_override_virtual_dataChanged(void* self, intptr_t slot);
void QTableView_virtualbase_dataChanged(void* self, QModelIndex* topLeft, QModelIndex* bottomRight, struct miqt_array /* of int */  roles);
bool QTableView_override_virtual_rowsInserted(void* self, intptr_t slot);
void QTableView_virtualbase_rowsInserted(void* self, QModelIndex* parent, int start, int end);
bool QTableView_override_virtual_rowsAboutToBeRemoved(void* self, intptr_t slot);
void QTableView_virtualbase_rowsAboutToBeRemoved(void* self, QModelIndex* parent, int start, int end);
bool QTableView_override_virtual_updateEditorData(void* self, intptr_t slot);
void QTableView_virtualbase_updateEditorData(void* self);
bool QTableView_override_virtual_updateEditorGeometries(void* self, intptr_t slot);
void QTableView_virtualbase_updateEditorGeometries(void* self);
bool QTableView_override_virtual_verticalScrollbarValueChanged(void* self, intptr_t slot);
void QTableView_virtualbase_verticalScrollbarValueChanged(void* self, int value);
bool QTableView_override_virtual_horizontalScrollbarValueChanged(void* self, intptr_t slot);
void QTableView_virtualbase_horizontalScrollbarValueChanged(void* self, int value);
bool QTableView_override_virtual_closeEditor(void* self, intptr_t slot);
void QTableView_virtualbase_closeEditor(void* self, QWidget* editor, int hint);
bool QTableView_override_virtual_commitData(void* self, intptr_t slot);
void QTableView_virtualbase_commitData(void* self, QWidget* editor);
bool QTableView_override_virtual_editorDestroyed(void* self, intptr_t slot);
void QTableView_virtualbase_editorDestroyed(void* self, QObject* editor);
bool QTableView_override_virtual_edit2(void* self, intptr_t slot);
bool QTableView_virtualbase_edit2(void* self, QModelIndex* index, int trigger, QEvent* event);
bool QTableView_override_virtual_selectionCommand(void* self, intptr_t slot);
int QTableView_virtualbase_selectionCommand(const void* self, QModelIndex* index, QEvent* event);
bool QTableView_override_virtual_startDrag(void* self, intptr_t slot);
void QTableView_virtualbase_startDrag(void* self, int supportedActions);
bool QTableView_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QTableView_virtualbase_focusNextPrevChild(void* self, bool next);
bool QTableView_override_virtual_event(void* self, intptr_t slot);
bool QTableView_virtualbase_event(void* self, QEvent* event);
bool QTableView_override_virtual_viewportEvent(void* self, intptr_t slot);
bool QTableView_virtualbase_viewportEvent(void* self, QEvent* event);
bool QTableView_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QTableView_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QTableView_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QTableView_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QTableView_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QTableView_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QTableView_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QTableView_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QTableView_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QTableView_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QTableView_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QTableView_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QTableView_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QTableView_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QTableView_override_virtual_dropEvent(void* self, intptr_t slot);
void QTableView_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QTableView_override_virtual_focusInEvent(void* self, intptr_t slot);
void QTableView_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QTableView_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QTableView_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QTableView_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QTableView_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QTableView_override_virtual_resizeEvent(void* self, intptr_t slot);
void QTableView_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QTableView_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QTableView_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* event);
bool QTableView_override_virtual_eventFilter(void* self, intptr_t slot);
bool QTableView_virtualbase_eventFilter(void* self, QObject* object, QEvent* event);
bool QTableView_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QTableView_virtualbase_minimumSizeHint(const void* self);
bool QTableView_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QTableView_virtualbase_sizeHint(const void* self);
void QTableView_virtualbase_setupViewport(void* self, QWidget* viewport);