qt/gen_qtableview.nim

proc fcQTableView_override_virtual_viewportSizeHint(self: pointer, slot: int) {.importc: "QTableView_override_virtual_viewportSizeHint".}
proc fQTableView_virtualbase_sizeHintForRow(self: pointer, row: cint): cint{.importc: "QTableView_virtualbase_sizeHintForRow".}
proc fcQTableView_override_virtual_sizeHintForRow(self: pointer, slot: int) {.importc: "QTableView_override_virtual_sizeHintForRow".}
proc fQTableView_virtualbase_sizeHintForColumn(self: pointer, column: cint): cint{.importc: "QTableView_virtualbase_sizeHintForColumn".}
proc fcQTableView_override_virtual_sizeHintForColumn(self: pointer, slot: int) {.importc: "QTableView_override_virtual_sizeHintForColumn".}
proc fQTableView_virtualbase_verticalScrollbarAction(self: pointer, action: cint): void{.importc: "QTableView_virtualbase_verticalScrollbarAction".}
proc fcQTableView_override_virtual_verticalScrollbarAction(self: pointer, slot: int) {.importc: "QTableView_override_virtual_verticalScrollbarAction".}
proc fQTableView_virtualbase_horizontalScrollbarAction(self: pointer, action: cint): void{.importc: "QTableView_virtualbase_horizontalScrollbarAction".}
proc fcQTableView_override_virtual_horizontalScrollbarAction(self: pointer, slot: int) {.importc: "QTableView_override_virtual_horizontalScrollbarAction".}
proc fQTableView_virtualbase_isIndexHidden(self: pointer, index: pointer): bool{.importc: "QTableView_virtualbase_isIndexHidden".}
proc fcQTableView_override_virtual_isIndexHidden(self: pointer, slot: int) {.importc: "QTableView_override_virtual_isIndexHidden".}
proc fQTableView_virtualbase_selectionChanged(self: pointer, selected: pointer, deselected: pointer): void{.importc: "QTableView_virtualbase_selectionChanged".}
proc fcQTableView_override_virtual_selectionChanged(self: pointer, slot: int) {.importc: "QTableView_override_virtual_selectionChanged".}
proc fQTableView_virtualbase_currentChanged(self: pointer, current: pointer, previous: pointer): void{.importc: "QTableView_virtualbase_currentChanged".}
proc fcQTableView_override_virtual_currentChanged(self: pointer, slot: int) {.importc: "QTableView_override_virtual_currentChanged".}
proc fQTableView_virtualbase_keyboardSearch(self: pointer, search: struct_miqt_string): void{.importc: "QTableView_virtualbase_keyboardSearch".}
proc fcQTableView_override_virtual_keyboardSearch(self: pointer, slot: int) {.importc: "QTableView_override_virtual_keyboardSearch".}
proc fQTableView_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer{.importc: "QTableView_virtualbase_inputMethodQuery".}
proc fcQTableView_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QTableView_override_virtual_inputMethodQuery".}
proc fQTableView_virtualbase_reset(self: pointer, ): void{.importc: "QTableView_virtualbase_reset".}
proc fcQTableView_override_virtual_reset(self: pointer, slot: int) {.importc: "QTableView_override_virtual_reset".}
proc fQTableView_virtualbase_selectAll(self: pointer, ): void{.importc: "QTableView_virtualbase_selectAll".}
proc fcQTableView_override_virtual_selectAll(self: pointer, slot: int) {.importc: "QTableView_override_virtual_selectAll".}
proc fQTableView_virtualbase_dataChanged(self: pointer, topLeft: pointer, bottomRight: pointer, roles: struct_miqt_array): void{.importc: "QTableView_virtualbase_dataChanged".}
proc fcQTableView_override_virtual_dataChanged(self: pointer, slot: int) {.importc: "QTableView_override_virtual_dataChanged".}
proc fQTableView_virtualbase_rowsInserted(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QTableView_virtualbase_rowsInserted".}
proc fcQTableView_override_virtual_rowsInserted(self: pointer, slot: int) {.importc: "QTableView_override_virtual_rowsInserted".}
proc fQTableView_virtualbase_rowsAboutToBeRemoved(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QTableView_virtualbase_rowsAboutToBeRemoved".}
proc fcQTableView_override_virtual_rowsAboutToBeRemoved(self: pointer, slot: int) {.importc: "QTableView_override_virtual_rowsAboutToBeRemoved".}
proc fQTableView_virtualbase_updateEditorData(self: pointer, ): void{.importc: "QTableView_virtualbase_updateEditorData".}
proc fcQTableView_override_virtual_updateEditorData(self: pointer, slot: int) {.importc: "QTableView_override_virtual_updateEditorData".}
proc fQTableView_virtualbase_updateEditorGeometries(self: pointer, ): void{.importc: "QTableView_virtualbase_updateEditorGeometries".}
proc fcQTableView_override_virtual_updateEditorGeometries(self: pointer, slot: int) {.importc: "QTableView_override_virtual_updateEditorGeometries".}
proc fQTableView_virtualbase_verticalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QTableView_virtualbase_verticalScrollbarValueChanged".}
proc fcQTableView_override_virtual_verticalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QTableView_override_virtual_verticalScrollbarValueChanged".}
proc fQTableView_virtualbase_horizontalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QTableView_virtualbase_horizontalScrollbarValueChanged".}
proc fcQTableView_override_virtual_horizontalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QTableView_override_virtual_horizontalScrollbarValueChanged".}
proc fQTableView_virtualbase_closeEditor(self: pointer, editor: pointer, hint: cint): void{.importc: "QTableView_virtualbase_closeEditor".}
proc fcQTableView_override_virtual_closeEditor(self: pointer, slot: int) {.importc: "QTableView_override_virtual_closeEditor".}
proc fQTableView_virtualbase_commitData(self: pointer, editor: pointer): void{.importc: "QTableView_virtualbase_commitData".}
proc fcQTableView_override_virtual_commitData(self: pointer, slot: int) {.importc: "QTableView_override_virtual_commitData".}
proc fQTableView_virtualbase_editorDestroyed(self: pointer, editor: pointer): void{.importc: "QTableView_virtualbase_editorDestroyed".}
proc fcQTableView_override_virtual_editorDestroyed(self: pointer, slot: int) {.importc: "QTableView_override_virtual_editorDestroyed".}
proc fQTableView_virtualbase_edit2(self: pointer, index: pointer, trigger: cint, event: pointer): bool{.importc: "QTableView_virtualbase_edit2".}
proc fcQTableView_override_virtual_edit2(self: pointer, slot: int) {.importc: "QTableView_override_virtual_edit2".}
proc fQTableView_virtualbase_selectionCommand(self: pointer, index: pointer, event: pointer): cint{.importc: "QTableView_virtualbase_selectionCommand".}
proc fcQTableView_override_virtual_selectionCommand(self: pointer, slot: int) {.importc: "QTableView_override_virtual_selectionCommand".}
proc fQTableView_virtualbase_startDrag(self: pointer, supportedActions: cint): void{.importc: "QTableView_virtualbase_startDrag".}
proc fcQTableView_override_virtual_startDrag(self: pointer, slot: int) {.importc: "QTableView_override_virtual_startDrag".}
proc fQTableView_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QTableView_virtualbase_focusNextPrevChild".}
proc fcQTableView_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QTableView_override_virtual_focusNextPrevChild".}
proc fQTableView_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QTableView_virtualbase_event".}
proc fcQTableView_override_virtual_event(self: pointer, slot: int) {.importc: "QTableView_override_virtual_event".}
proc fQTableView_virtualbase_viewportEvent(self: pointer, event: pointer): bool{.importc: "QTableView_virtualbase_viewportEvent".}
proc fcQTableView_override_virtual_viewportEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_viewportEvent".}
proc fQTableView_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_mousePressEvent".}
proc fcQTableView_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_mousePressEvent".}
proc fQTableView_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_mouseMoveEvent".}
proc fcQTableView_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_mouseMoveEvent".}
proc fQTableView_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_mouseReleaseEvent".}
proc fcQTableView_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_mouseReleaseEvent".}
proc fQTableView_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_mouseDoubleClickEvent".}
proc fcQTableView_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_mouseDoubleClickEvent".}
proc fQTableView_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_dragEnterEvent".}
proc fcQTableView_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_dragEnterEvent".}
proc fQTableView_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_dragMoveEvent".}
proc fcQTableView_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_dragMoveEvent".}
proc fQTableView_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_dragLeaveEvent".}
proc fcQTableView_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_dragLeaveEvent".}
proc fQTableView_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_dropEvent".}
proc fcQTableView_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_dropEvent".}
proc fQTableView_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_focusInEvent".}
proc fcQTableView_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_focusInEvent".}
proc fQTableView_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_focusOutEvent".}
proc fcQTableView_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_focusOutEvent".}
proc fQTableView_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_keyPressEvent".}
proc fcQTableView_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_keyPressEvent".}
proc fQTableView_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_resizeEvent".}
proc fcQTableView_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_resizeEvent".}
proc fQTableView_virtualbase_inputMethodEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_inputMethodEvent".}
proc fcQTableView_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_inputMethodEvent".}
proc fQTableView_virtualbase_eventFilter(self: pointer, objectVal: pointer, event: pointer): bool{.importc: "QTableView_virtualbase_eventFilter".}
proc fcQTableView_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QTableView_override_virtual_eventFilter".}
proc fQTableView_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QTableView_virtualbase_minimumSizeHint".}
proc fcQTableView_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QTableView_override_virtual_minimumSizeHint".}
proc fQTableView_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QTableView_virtualbase_sizeHint".}
proc fcQTableView_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QTableView_override_virtual_sizeHint".}
proc fQTableView_virtualbase_setupViewport(self: pointer, viewport: pointer): void{.importc: "QTableView_virtualbase_setupViewport".}
